--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,28 @@
-version : '3'
-services:
-  pemweb:
-    build: ./php
-    image: pemweb_php:latest
-    container_name: pemweb
-    hostname: "project-akhir"
-    volumes:
-      - ./src:/var/www/html
-      - ./php/www.conf:/usr/local/etc/php-fpm.d/www.conf
-    working_dir: /var/www/html
+version: "3"
 
-  nginx_pemweb:
-    build: ./nginx
-    image: nginx_pemweb:latest
-    container_name: nginx_pemweb
-    hostname: "nginx_pemweb"
+services:
+  pert2:
+    build:
+      context: ./php
+    image: "${COMPOSE_PROJECT_NAME}/${REPOSITORY_NAME}_php:${IMAGE_TAG}"
+    container_name: "${REPOSITORY_NAME}_php"
+    hostname: "pert2"
+    volumes:
+      - ./src:/var/www/
+      - ./php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+    working_dir: /var/www/
+
+  pert2_nginx:
+    build:
+      context: ./nginx
+    image: "${COMPOSE_PROJECT_NAME}/${REPOSITORY_NAME}_nginx:${IMAGE_TAG}"
+    container_name: "${REPOSITORY_NAME}_nginx"
+    hostname: "pert2-nginx"
     ports:
       - "80:80"
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - pemweb
+      - pert2
+
